--- a/less/variables.less
+++ b/less/variables.less
@@ -37,6 +37,10 @@
 @tpl-button-border-color: @tpl-border-color;
 @tpl-button-border-color-active: #3a659a;
 
+@tpl-input-border-color-active: #46b4e6;
+@tpl-input-border-color-error: #f87e71;
+@tpl-input-border-color-ok: #92c75a;
+
 @tpl-column-right-style1: 33%;
 @tpl-column-right-style2: 50%;
 @tpl-column-right-style3: 54%;
