--- a/libs/common/less/components.less
+++ b/libs/common/less/components.less
@@ -1,3 +1,5 @@
+/* ************ COMMON COMPONENTS ************ */
+
 @import "components/tooltip.less";
 @import "components/select.less";
 @import "components/calendar.less";
