--- a/libs/common/less/components/datepicker.less
+++ b/libs/common/less/components/datepicker.less
@@ -3,13 +3,15 @@
 .com-datepicker-input {
     @clear-button-indent: @cm-form-field-height + @cm-form-inner-indent;
 
-    max-width: 200px;
+    width: @com-datepicker-width;
+    display: inline-block;
+    vertical-align: top;
     position: relative;
     z-index: 1;
     outline: none;
 
     &.has-clear-button {
-        margin: 0 @clear-button-indent 0 0;
+        padding: 0 @clear-button-indent 0 0;
     }
 
     > .icon {
@@ -17,12 +19,8 @@
         height: @cm-form-field-height;
         position: absolute;
 
-        &.datepicker {
-            .cm-position(0, 0, auto, auto);
-        }
-
         &.remove {
-            .cm-position(0, -@clear-button-indent, auto, auto);
+            .cm-position(0, 0, auto, auto);
         }
     }
 }
@@ -30,6 +28,7 @@
 /* Tooltip */
 
 .com-datepicker-tooltip {
+    width: @com-datepicker-tooltip-width;
 
     > .inner > .scroll {
         overflow: visible;
@@ -38,7 +37,7 @@
     .button.today {
         width: 100%;
         padding: 0;
-        margin: 4px 0 0 0;
+        margin: @cm-block-padding-small 0 0 0;
     }
 }
 
@@ -47,14 +46,11 @@
 .com-datepicker-calendar {
     .selects {
         .months {
-            width: 111px;
-            float: left;
+            width: 60%;
         }
 
         .years {
-            width: 75px;
-            margin-left: 4px;
-            float: left;
+            width: 38%;
         }
     }
 }
