--- a/libs/common/less/variables.less
+++ b/libs/common/less/variables.less
@@ -21,10 +21,14 @@
 @cm-form-field-indent: 16px;
 @cm-form-dt-width: 150px;
 @cm-form-inner-indent: @cm-form-field-indent / 2;
-
 @cm-button-indent: 8px;
 
-// /* ******* COMPONENTS ******* */
+/* Columns */
+
+@cm-cols-names: one two three four five six seven eight nine ten;
+@cm-cols-indent: 2%;
+
+// /* ******* COMPONENTS EMBEDDED ******* */
 
 // /* *** FILES LIST *** */
 
@@ -36,3 +40,16 @@
 @cm-toolbar-item-indent: 4px;
 @cm-toolbar-medium: 140px;
 @cm-toolbar-large: 250px;
+
+// /* ******* COMPONENTS ******* */
+
+// /* *** DATEPICKER *** */
+
+@com-datepicker-width: 210px;
+@com-datepicker-tooltip-width: @com-datepicker-width;
+
+// /* *** GRIDLIST *** */
+
+@com-gridlist-font-size: 11px;
+@com-gridlist-padding-inner: 6px;
+@com-gridlist-link-indent: 6px;
