--- a/less/main.less
+++ b/less/main.less
@@ -12,6 +12,8 @@
     margin: 0 0 @size + round(@size / 4) 0;
 }
 
+// /* ******* BUNDLE ******* */
+
 #tpl () {
     .base-font {
         font: normal normal @tpl-font-size @tpl-font-family;
@@ -419,7 +421,7 @@ button {
     padding: 0 30px;
 
     > .inner {
-        max-width: 1220px;
+        //max-width: 1220px;
         margin: 0 auto;
     }
 }
